@@ -64,6 +64,8 @@ BerliOS Bugs are marked with (BerliOS #XXXX).
       patches!
 * pam_umask: New module for setting umask from GECOS field, /etc/login.defs
   or /etc/default/login (kukuk)
+* configure/pam_strerror: Remove old ugly-hack option for pam_strerror
+  interface change (kukuk)
 
 0.80: Wed Jul 13 13:23:20 CEST 2005
 * pam_tally: test for NULL data before dereferencing them (t8m)
